--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "bundle/textobj"]
 	path = bundle/textobj
 	url = https://github.com/kana/vim-textobj-user.git
+[submodule "bundle/rubyblock"]
+	path = bundle/rubyblock
+	url = https://github.com/nelstrom/vim-textobj-rubyblock.git
